[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/background/Background_2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/background/Background_0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/background/Background_1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/background/Background_3.png" type="Texture" id=4]
[ext_resource path="res://scenes/game/levels/cave.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 90 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.5, 651 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512.5, 90 )

[node name="Cave" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="ParallaxBackgroundBack" type="ParallaxBackground" parent="."]

[node name="background" type="TextureRect" parent="ParallaxBackgroundBack"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="walls" type="TextureRect" parent="ParallaxBackgroundBack"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="walls2" type="TextureRect" parent="ParallaxBackgroundBack"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ParallaxBackgroundFore" type="ParallaxBackground" parent="."]
layer = 100

[node name="background2" type="TextureRect" parent="ParallaxBackgroundFore"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="ground2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground2"]
position = Vector2( 512, 600 )
shape = SubResource( 2 )

[node name="Walls" type="Node" parent="."]

[node name="LeftBorder2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftBorder2"]
position = Vector2( 107, 314 )
shape = SubResource( 1 )

[node name="RightBorder2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightBorder2"]
position = Vector2( 915, 324 )
shape = SubResource( 1 )

[node name="ceilling" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/ceilling"]
position = Vector2( 510, -362 )
shape = SubResource( 2 )

[node name="SpawnPoint0" type="Node2D" parent="."]
position = Vector2( 219, 461 )

[node name="SpawnPoint1" type="Node2D" parent="."]
position = Vector2( 785, 460 )

[node name="NextLevel" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevel"]
position = Vector2( 512, 510 )
shape = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[connection signal="body_entered" from="NextLevel" to="." method="_on_NextLevel_body_entered"]
